# Automata-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  base_tool.py  exceptions.py  execution_context.py  log_viewer.py  routers.py  schemas.py  server.py
app/extension_config/: __init__.py  config_manager.py
app/llm/: client.py
app/src/: __init__.py
app/src/douyin/: __init__.py  douyin_tool.py
app/src/douyin_cookie/: __init__.py  config.yaml  douyin_cookie_tool.py
app/src/echo/: __init__.py  echo_tool.py
app/src/fetch/: __init__.py  config.yaml  fetch_tool.py
app/src/flow_wait/: __init__.py  config.yaml  flow_wait_tool.py
app/src/image_upload/: __init__.py  config.yaml  image_upload_tool.py
app/src/long_text_content/: __init__.py  config.yaml  long_text_content_tool.py
app/src/polish/: __init__.py  config.yaml  polish_tool.py
app/src/video_edit/: __init__.py  video_edit_tool.py
app/src/video_generate/: __init__.py  config.yaml  generate.py  subtitle_generate.py  video_generate_tool.py
app/src/video_upload/: __init__.py  config.yaml  video_upload_tool.py
app/src/xiaohongshu/: __init__.py  config.yaml  (+1 more)
app/utils/: douyin_cookie.py  xiaohongshu_cookie.py
config/: config.json
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.vue  style.css
data/: .gitignore
docs/: agentic_mcp_execute_integration.md  n8n_integration.md  plugins.md  工具适配规范.md  接入指南.md
scripts/: sync_deps.py
(+42 files in other folders)
