[project]
name = "automata-mcp-server"
version = "0.1.0"
description = "Automata MCP Server"
dependencies = [
    "fastapi==0.119.1",
    "uvicorn==0.38.0",
    "mcp==1.18.0",
    "pydantic==2.11.7",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pyyaml>=6.0.3",
    "loguru>=0.7.0",
    "fastapi-mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]
