[project]
name = "automata-mcp-server"
version = "0.1.0"
description = "Automata MCP Server"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi==0.119.1",
    "uvicorn==0.38.0",
    "mcp==1.18.0",
    "pydantic==2.11.7",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pyyaml>=6.0.3",
    "loguru>=0.7.0",
    "fastapi-mcp",
    "playwright (>=1.55.0,<2.0.0)",
    "playwright-stealth (>=2.0.0,<3.0.0)",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "numpy>=2.2.6",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]
